--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "server": "node dev-server.js",
+    "build": "webpack",
+    "start": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -25,9 +27,16 @@
     "webpack": "^4.43.0"
   },
   "devDependencies": {
+    "@types/clean-webpack-plugin": "^0.1.3",
     "awesome-typescript-loader": "^5.2.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "express": "^4.17.1",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.3.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.8.3",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-server": "^3.11.0"
   }
 }
